--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -246,6 +246,8 @@ a[href|="killerrabbit"] {
 
 }
 
+
+
 /*Bob Ross Search Man*/
 
 .sidecontentbox .flair {display:none}
@@ -473,3 +475,21 @@ a[href="/cocowave"], a[href="/grannyumad"], a[href="/woonaexcited"]{
 a[href="/cocowave"]{ background-position: 0 0; width: 150px; height: 150px; } 
 a[href="/grannyumad"]{ background-position: 0 -300px; width: 150px; height: 150px; } 
 a[href="/woonaexcited"]{ background-position: 0 -600px; width: 150px; height: 150px; } 
+
+/*Mega Awesome /r/Berrytrain exclusive mail changer machine 4200 with air conditioning and scones*/
+
+#mail {
+position: relative;
+display: inline-block;
+text-indent: -9999px;
+overflow: hidden;
+width: 15px; 
+height: 10px;}
+
+#mail.havemail {
+background:url(%%BerryMail%%);
+}
+
+/*The End of the Mega Awesome /r/Berrytrain exclusive mail changer machine 4200 with air conditioning and scones*/
+
+
