--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -113,7 +113,7 @@ a[href|="/cheesechill"]{ background-position: -200px -100px }
 a[href|="/cheesemad"]{ background-position: -0px -200px }
 
 /* 150px shared values */
-a[href|="/cheeseshock"], a[href|="/cheesethis"], a[href|="/cheesehappy"], a[href|="/cheeseandpinkie"], a[href|="/accordian"], a[href|="/partyhard"], a[href|="/cheesesmile"], a[href|="/cheesehug"], a[href|="/ppcheesehug"]{
+a[href|="/cheeseshock"], a[href|="/cheesethis"], a[href|="/cheesehappy"], a[href|="/cheeseandpinkie"], a[href|="/accordian"], a[href|="/partyhard"], a[href|="/cheesesmile"], a[href|="/cheesehug"], a[href|="/ppcheesehug"], a[href|="/argumentinvalid"], a[href|="/cheeseandtubamouse"]{
     display: block;
     clear: none;
     float: left;
@@ -132,6 +132,7 @@ a[href|="/partyhard"]{ background-position:-300px -150px }
 a[href|="/cheesesmile"]{ background-position: -0px -300px; width: 103px }
 a[href|="/cheesehug"]{ background-position: -150px -300px }
 a[href|="/ppcheesehug"]{ background-position: -300px -300px }
+a[href|="/argumentinvalid"], a[href|="/cheeseandtubamouse"]{ background-position: -0px -450px }
 
 /* oddballs */
 a[href|="/rubberchickendance"] { 
