--- a/source-css/hugemotes.css
+++ b/source-css/hugemotes.css
@@ -80,6 +80,7 @@ a[href|="/raritypiebrush"], a[href|="/berrygrouphug"], a[href|="/raritavikiss"],
 {background-image:url(%%misfits5a%%);display:block;float:left;}
 
 /* Animated Emotes */
+a[href|="/zilean"] {background-image: url(%%Zilean%%);width:345px;height:250px;display:block;float:left;}
 
 /* Misfit Emotes */
 a[href|="/applepiehug"] {width:300px;height:194px;}
