--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2,7 +2,7 @@
 
 div.titlebox .subscribers span.number:after {content:" Sillies and Numpties"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Being silly" }
+div.titlebox p.users-online span.number:after { content: " Being Silly" }
 div.titlebox p.users-online span.word { display: none }
 
 .sidecontentbox .flair {display:none}
@@ -382,7 +382,7 @@ a[href|="/rfillyrarity"],a[href|="/rtwidurr"],a[href|="/ramazingmagic"],a[href|=
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%lounge-emotes-flipped%%)!important}
 
 a[href|="/filly"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%beefillytable%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%filly-table%%)!important}
 
 a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/karmasalute"],a[href|="/rkarmasalute"],.flair-pinkiepie,.side .md table tr:nth-of-type(3) td:nth-of-type(2):after,.side .md table tr:nth-of-type(23) td:nth-of-type(2):after,.usertext input[value$="j"] + .usertext-body a[href="/filly"],.usertext input[value$="k"] + .usertext-body a[href="/filly"],.usertext input[value$="l"] + .usertext-body a[href="/filly"]
 {background-position:0 -100%}
