--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2195,3 +2195,12 @@ a[href|="/tavidashband"] {
  background-image: url(%%spritesheet17%%);
  background-position: -0px -1300px;
 } 
+
+a[href|="/fluttertavimane"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 169px;
+ height: 119px;
+ background-image: url(%%CUTAYEMOTE%%);
+} 
