--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -377,7 +377,7 @@ a[href|="/supershy"], a[href|="/ohhmy"] {
     }
 /* FANCY SHEET I MEAN SHEET #4 */
 
-a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/buttfilly"], a[href|="/buttshy"], a[href|="/pleeease"], a[href|="/flutterplease"] {
+a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/cloudfilly"], a[href|="/cloudshy"], a[href|="/pleeease"], a[href|="/flutterplease"] {
 
         display: block;
     clear: none;
@@ -410,7 +410,7 @@ a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"] {
     width: 137px;
     background-position: -1003px -0px;
     }
-a[href|="/buttfilly"], a[href|="/buttshy"] {
+a[href|="/cloudfilly"], a[href|="/cloudshy"] {
     width: 153px;
     background-position: -1140px -0px;
     }
@@ -562,6 +562,14 @@ a[href|="/scaredshy"], a[href|="/scarymonsters"] {
 
 /* Animotes - aPNG emotes! */
 
+a[href|="/ooohmy"], a[href|="/bedroomshy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 278px;
+    height: 200px;
+    background-image: url(%%ohmy%%)
+    }
 
 a[href|="/fluttersmile"], a[href|="/shysmile"] {
     display: block;
