--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -588,10 +588,10 @@ a[href|="/rdsitting"],a[href|="/c00"],a[href|="/rdhappy"],a[href|="/c10"],a[href
 a[href|="/rrdsitting"],a[href|="/rc00"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/rhahaha"],a[href|="/rc22"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/rc23"],a[href|="/rajfrown"],a[href|="/rc04"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/rjoy"],a[href|="/rc24"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/rraritysad"],a[href|="/rc05"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/rderp"],a[href|="/rc25"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rc36"],a[href|="/rlouder"],a[href|="/rc06"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/rderpyshock"],a[href|="/rc26"],a[href|="/rpinkamina"],a[href|="/rc07"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/rlunagasp"],a[href|="/rc27"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rc37"],a[href|="/rc08"],a[href|="/rcelestia"],a[href|="/rc18"],a[href|="/rangel"],a[href|="/rc28"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rc38"],a[href|="/rc09"],a[href|="/rzecora"],a[href|="/rc19"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/rppreally"],a[href|="/rc39"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%cmotes-flipped%%)!important}
 
-a[href|="/fillytgap"],a[href|="/t00"],a[href|="/e00"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/snails"],a[href|="/e20"],a[href|="/twisad"],a[href|="/e30"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/bonbon"],a[href|="/e11"],a[href|="/spitfire"],a[href|="/e21"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/e12"],a[href|="/sotrue"],a[href|="/e22"],a[href|="/wahaha"],a[href|="/e03"],a[href|="/sbstare"],a[href|="/e13"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/e23"],a[href|="/huhhuh"],a[href|="/e04"],a[href|="/absmile"],a[href|="/e14"],a[href|="/dealwithit"],a[href|="/e24"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/e05"],a[href|="/whooves"],a[href|="/e15"],a[href|="/rdsalute"],a[href|="/e25"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/e06"],a[href|="/colgate"],a[href|="/e16"],a[href|="/cheerilee"],a[href|="/e26"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/e07"],a[href|="/abhuh"],a[href|="/e17"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/e27"],a[href|="/twiponder"],a[href|="/e08"],a[href|="/spikewtf"],a[href|="/e18"],a[href|="/awwyeah"],a[href|="/e28"],a[href|="/gilda"],a[href|="/e09"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/e19"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/e29"]
+a[href|="/fillytgap"],a[href|="/t00"],a[href|="/e00"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/snails"],a[href|="/e20"],a[href|="/twisad"],a[href|="/e30"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/bonbon"],a[href|="/e11"],a[href|="/spitfire"],a[href|="/e21"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/e12"],a[href|="/sotrue"],a[href|="/e22"],a[href|="/wahaha"],a[href|="/e03"],a[href|="/sbstare"],a[href|="/e13"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/e23"],a[href|="/huhhuh"],a[href|="/e04"],a[href|="/absmile"],a[href|="/e14"],a[href|="/dealwithit"],a[href|="/e24"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/e05"],a[href|="/whooves"],a[href|="/e15"],a[href|="/rdsalute"],a[href|="/e25"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/e06"],a[href|="/colgate"],a[href|="/e16"],a[href|="/cheerilee"],a[href|="/e26"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/e07"],a[href|="/abhuh"],a[href|="/e17"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/e27"],a[href|="/twiponder"],a[href|="/e08"],a[href|="/spikewtf"],a[href|="/e18"],a[href|="/awwyeah"],a[href|="/e28"],a[href|="/gilda"],a[href|="/e09"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/e19"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/e29"], a[href|="/e31"], a[href|="/lunamad"], a[href|="/e32"], a[href|="/discordsad"], a[href|="/e33"], a[href|="/maud"], a[href|="/e34"], a[href|="/pinkiepout"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%emotes%%)!important}
 
-a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/re23"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/rdealwithit"],a[href|="/re24"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/re05"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/rrdsalute"],a[href|="/re25"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/re06"],a[href|="/rcolgate"],a[href|="/re16"],a[href|="/rcheerilee"],a[href|="/re26"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/re27"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/rspikewtf"],a[href|="/re18"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"]
+a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/re23"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/rdealwithit"],a[href|="/re24"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/re05"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/rrdsalute"],a[href|="/re25"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/re06"],a[href|="/rcolgate"],a[href|="/re16"],a[href|="/rcheerilee"],a[href|="/re26"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/re27"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/rspikewtf"],a[href|="/re18"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"], a[href|="/re31"], a[href|="/rlunamad"], a[href|="/re32"], a[href|="/rdiscordsad"], a[href|="/re33"], a[href|="/rmaud"], a[href|="/re34"], a[href|="/rpinkiepout"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%emotes-flipped%%)!important}
 
 a[href|="/smooze"],a[href|="/rsmooze"]
@@ -756,16 +756,16 @@ a[href|="/squintyjack"],a[href|="/b24"],a[href|="/rsquintyjack"],a[href|="/rb24"
 a[href|="/flutterroll"],a[href|="/a30"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/trixiesad"],a[href|="/c30"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/twisad"],a[href|="/e30"],a[href|="/rtwisad"],a[href|="/re30"],.flair-applejack,.side .md table tr:nth-of-type(1) td:nth-of-type(5):after
 {background-position:-300% 0}
 
-a[href|="/spikemeh"],a[href|="/a31"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/changeling"],a[href|="/c31"],a[href|="/rchangeling"],a[href|="/rc31"],.flair-cmc,.flair-cmcchinchy,.side .md table tr:nth-of-type(3) td:nth-of-type(5):after
+a[href|="/spikemeh"],a[href|="/a31"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/changeling"],a[href|="/c31"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/e31"],a[href|="/lunamad"],a[href|="/re31"],a[href|="/rlunamad"],.flair-cmc,.flair-cmcchinchy,.side .md table tr:nth-of-type(3) td:nth-of-type(5):after
 {background-position:-300% -100%}
 
-a[href|="/abmeh"],a[href|="/a32"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rdscared"],a[href|="/c32"],a[href|="/rrdscared"],a[href|="/rc32"],.flair-vinyl,.side .md table tr:nth-of-type(5) td:nth-of-type(5):after
+a[href|="/abmeh"],a[href|="/a32"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rdscared"],a[href|="/c32"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/e32"], a[href|="/discordsad"],a[href|="/re32"], a[href|="/rdiscordsad"],.flair-vinyl,.side .md table tr:nth-of-type(5) td:nth-of-type(5):after
 {background-position:-300% -200%}
 
-a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/a33"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/twidaw"],a[href|="/c33"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],.flair-doctor,.side .md table tr:nth-of-type(7) td:nth-of-type(5):after
+a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/a33"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/twidaw"],a[href|="/c33"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/e33"], a[href|="/maud"],a[href|="/re33"], a[href|="/rmaud"],.flair-doctor,.side .md table tr:nth-of-type(7) td:nth-of-type(5):after
 {background-position:-300% -300%}
 
-a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/a34"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/whattheflut"],a[href|="/c34"],a[href|="/rwhattheflut"],a[href|="/rc34"],.flair-pokey,.side .md table tr:nth-of-type(9) td:nth-of-type(5):after
+a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/a34"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/whattheflut"],a[href|="/c34"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/e34"], a[href|="/pinkiepout"],a[href|="/re34"], a[href|="/rpinkiepout"],.flair-pokey,.side .md table tr:nth-of-type(9) td:nth-of-type(5):after
 {background-position:-300% -400%}
 
 a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/a35"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/ra35"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/c35"],a[href|="/rc35"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],.flair-carrottop,.side .md table tr:nth-of-type(11) td:nth-of-type(5):after
@@ -1067,15 +1067,19 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .side .md table:nth-of-type(4) tr:nth-of-type(4) td:nth-of-type(2):after{content:"lyra"}
 .side .md table:nth-of-type(4) tr:nth-of-type(4) td:nth-of-type(3):after{content:"bonbon"}
 .side .md table:nth-of-type(4) tr:nth-of-type(4) td:nth-of-type(4):after{content:"spitfire"}
+.side .md table:nth-of-type(4) tr:nth-of-type(4) td:nth-of-type(5):after{content:"lunamad"}
 .side .md table:nth-of-type(4) tr:nth-of-type(6) td:nth-of-type(2):after{content:"cutealoo"}
 .side .md table:nth-of-type(4) tr:nth-of-type(6) td:nth-of-type(3):after{content:"happyluna"}
 .side .md table:nth-of-type(4) tr:nth-of-type(6) td:nth-of-type(4):after{content:"sotrue"}
+.side .md table:nth-of-type(4) tr:nth-of-type(6) td:nth-of-type(5):after{content:"discordsad"}
 .side .md table:nth-of-type(4) tr:nth-of-type(8) td:nth-of-type(2):after{content:"wahaha"}
 .side .md table:nth-of-type(4) tr:nth-of-type(8) td:nth-of-type(3):after{content:"sbstare"}
 .side .md table:nth-of-type(4) tr:nth-of-type(8) td:nth-of-type(4):after{content:"berry"}
+.side .md table:nth-of-type(4) tr:nth-of-type(8) td:nth-of-type(5):after{content:"maud"}
 .side .md table:nth-of-type(4) tr:nth-of-type(10) td:nth-of-type(2):after{content:"huhhuh"}
 .side .md table:nth-of-type(4) tr:nth-of-type(10) td:nth-of-type(3):after{content:"absmile"}
 .side .md table:nth-of-type(4) tr:nth-of-type(10) td:nth-of-type(4):after{content:"dealwithit"}
+.side .md table:nth-of-type(4) tr:nth-of-type(10) td:nth-of-type(5):after{content:"pinkiepout"}
 .side .md table:nth-of-type(4) tr:nth-of-type(12) td:nth-of-type(2):after{content:"nmm"}
 .side .md table:nth-of-type(4) tr:nth-of-type(12) td:nth-of-type(3):after{content:"whooves"}
 .side .md table:nth-of-type(4) tr:nth-of-type(12) td:nth-of-type(4):after{content:"rdsalute"}
@@ -1115,6 +1119,24 @@ body:not(.moderator) div.content .flairselectbtn
  margin-right:2px;
  top:-1px;
 }
+
+/*Equestria Girls Spoiler in title flair*/
+.linkflair-egspoiler .linkflairlabel {display:none;}
+.linkflair-egspoiler p.title a.title {opacity:0;}
+.linkflair-egspoiler p.title a.title:hover {opacity:100;}
+.linkflair-egspoiler p.title:before
+{
+ content:"EG2 SPOILER";
+ font-size:12px;
+ color:#888;
+ border:1px solid #888;
+ border-radius:3px;
+ position:relative;
+ padding:0px 2px;
+ margin-right:2px;
+ top:-1px;
+}
+
 
 /*Comic Spoilers in the title flair*/
 .linkflair-comictitlespoiler .linkflairlabel {display:none;}
