Stylesheet/emote/tag updates 2014-04-08

--- a/source-css/adery.css
+++ b/source-css/adery.css
@@ -59,7 +59,7 @@ body.res-nightmode:first-of-type > .content {background-color: transparent!impor
     background-repeat: no-repeat;
     margin: 0 auto;
     font-size: 0px;
-    padding: 50px 235px 6px 0;
+    padding: 50px 235px 0px 0;
     color: #364657;
     left: 105px;
     position: absolute;
@@ -147,9 +147,10 @@ background-repeat: no-repeat;
 .flair-Beatbawx:after {width:40px; height:40px; background-position: -1px -2147px}
 .flair-jeroknite:after {width:40px; height:40px; background-position: -1px -2187px}
 .flair-Saltbearer:after {width:40px; height:40px; background-position: -1px -2227px}
+.flair-spammy:after {width:40px; height:40px; background-position: -2px -2267px}
 
 /* ------ Emotes! --------- */
-a[href|='/cocoawkward'], a[href|='/funnay'], a[href|='/gildabird'], a[href|='/holyshit'], a[href|='/keytar'], a[href|='/pinkiebat'], a[href|='/ppchug'], a[href|='/rdscary'], a[href|='/twiperturbed']{ 
+a[href|='/cocoawkward'], a[href|='/funnay'], a[href|='/gildabird'], a[href|='/holyshit'], a[href|='/keytar'], a[href|='/pinkiebat'], a[href|='/ppchug'], a[href|='/rdscary'], a[href|='/twiperturbed'], a[href|='/lyra10']{ 
     display: block;
     clear: none;
     float: left;
@@ -165,7 +166,7 @@ a[href|='/pinkiebat'] {width:120px; height:150px; background-position: -2px -266
 a[href|='/ppchug'] {width:97px; height:140px; background-position: -2px -124px}
 a[href|='/rdscary'] {width:95px; height:120px; background-position: -2px -2px}
 a[href|='/twiperturbed'] {width:107px; height:130px; background-position: -101px -124px}
-
+a[href|='/lyra10'] {width:196px; height:150px; background-position: -1px -963px}
 
 a[href|='/cheekyaj'], a[href|='/cheekyderp'], a[href|='/cheekylyra'], a[href|='/cheekypp'], a[href|='/cheekyrara'], a[href|='/cheekyscoots'], a[href|='/cheekyshy'], a[href|='/cheekytwi'], a[href|='/cheekyvs'],a[href|='/cheekynoteass'], a[href|='/roselie'], a[href|='/octibored'], a[href|='/topunf'] {
     display: block;
