--- a/source-css/applejack.css
+++ b/source-css/applejack.css
@@ -22,6 +22,8 @@ div.titlebox .users-online span.number:after {
     display: block;
     clear: both
     }
+#headdit-box {display:none;}
+
 /***Apple Barons aka mods***/
 .sidecontentbox h1:not(:first-child)::before {
 color: gray !important;
@@ -115,7 +117,7 @@ background-position: 0 -10px;
 .side .subtitle, .flairtoggle {color:black;}
 body {
 background-color: #E3C19C !important;
-    background: url(%%applestraw%%) no-repeat fixed center center
+    background: url(%%angryjack%%) no-repeat fixed center center
     }
 div.footer-parent:after {
     width: 960px;
