--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -278,3 +278,4 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-flashsentry,.side .md table tr:nth-of-type(37) td:nth-of-type(4):after{background-position:-200% -1800%}
 .flair-cocopommel,.side .md table tr:nth-of-type(37) td:nth-of-type(5):after{background-position:-300% -1800%}
 .flair-cheesesandwich,.side .md table tr:nth-of-type(39) td:nth-of-type(2):after{background-position:0 -1900%}
+.flair-maudpie,.side .md table tr:nth-of-type(39) td:nth-of-type(3):after{background-position:-100% -1900%}
