--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -286,6 +286,30 @@ a[href|="/confirmed"], a[href|="/i13"] {
         height: 168px;
         background-image: url(%%confirmed%%)
         }
+a[href|="/shutup"], a[href|="/i14"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 500px;
+        height: 250px;
+        background-image: url(%%shutup%%)
+        }
+a[href|="/woo"], a[href|="/i20"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 150px;
+        height: 206px;
+        background-image: url(%%woo%%)
+        }
+a[href|="/myeyes2"], a[href|="/i21"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 200px;
+        height: 251px;
+        background-image: url(%%myeyes2%%)
+        }
     /**********************
     *
     *    OTHER EMOTE STUFF
