--- a/source-css/twidashmotes.css
+++ b/source-css/twidashmotes.css
@@ -1,3 +1,11 @@
+a[href|="/tdsleep2"] {
+    float:left;
+    width:250px;
+    height:135px;
+    background-repeat:no-repeat;
+    background-image:url(%%tdsleep2%%);
+}
+
 a[href|="/tdboop"] {
     float:left;
     width:300px;
