--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -11,13 +11,13 @@ div.titlebox p.users-online span.word { display: none }
 .titlebox .expando-button.collapsed.video{display:none!important}
 .sidecontentbox .voteWeight,.sidecontentbox .userTagLink{display:none!important}
 #search input[type='text']
-{
- background:url(%%searchbar-filly-trixie%%) top left no-repeat!important;
+/*{
+ background:url(%%sonabackground%%) top left no-repeat!important;
  padding:13px 2px 13px 50px!important;
  height:22px!important;
- width:245px!important
+ width:110px!important
 }
-
+*/
 #searchexpando.infobar 
 {
  background-image:url(%%crackle%%);
@@ -108,8 +108,8 @@ a.author.id-t2_52j0w:after{content:"RainbowDashJedi"}
 div.content a.author.id-t2_5agom:after{content:"Chinchy"}
 a.author.id-t2_5o2lh:after{content:"Luna_in_Equestria"}
 a.author.id-t2_4uott:after{content:"3cakes2pies1fork"}
-a.author.id-t2_3klgq:after {content:" is an artist";}
-a.author[href$="Ntrsoxide"]:after {content:" Wordsmith_Pony"}
+a.author.id-t2_3klgq:after{content:" is an artist";}
+a.author.id-t2_67xn1:after{content:" Wordsmith_Pony"}
 a[href|="/sp"]
 {
  display:inline-block;
@@ -173,7 +173,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  width:100%;
 /*Footer image by DestinyProgenitor on Deviant Art*/
- background-image:url(%%srsstare%%);
+ background-image:url(%%bee%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
@@ -200,15 +200,15 @@ h3.imgTitle{
 .side a[href="/r/MLPLounge/new/"]
 {
  display:block;
- width:70px;
- height:71px;
- background:url(%%fillytavi%%);
+ width:73px;
+ height:80px;
+ background:url(%%filly-twilight%%);
  position:fixed; 
- top:260px;
+ top:290px;
  right:-5px;
  z-index:999
 }
-body{background:url(%%bumble-bee-background%%) no-repeat fixed center center}
+body{background:url(%%sonabackground%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 /*New post spam filtered warning*/
