--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -5,6 +5,8 @@
 
 /* We're discord's bitches now */
 
+/* Rainbow Wookie */
+
 /* The things we do for pretzels... */
 body:first-of-type {
     background-image: url(%%dicks%%);
@@ -608,7 +610,7 @@ a.author[href$="DiscordDraconequus"] {
 
 a.author[href$="DiscordDraconequus"]:after {
     content: "Butt ";
-    font-size: 10px !important;
+    font-size: 12px !important;
     visibility: visible !important;
     display: block;
     letter-spacing: normal
@@ -622,11 +624,15 @@ a.author[href$="tortillatime"] {
     }
 a.author[href$="tortillatime"]:after {
     content: "taco";
-    font-size: 10px !important;
+    font-size: 12px !important;
     visibility: visible !important;
     display: block;
     letter-spacing: normal
     }
+
+a.author[href$="Generic_Builder"]{font-size:0px!important;}
+a.author[href$="Generic_Builder"]:after{content:"Do Not Lynch Generic_Builder";font-size:12px!important;}
+.sidecontentbox .author[href$="RedditUserName"]:after{font-size:12px!important;}
 
 body.res a.author[href$="CupcakeDraconequus"], body.res a.author[href$="PretzelDraconequus"], body.res a.author[href$="______Draconequus"] {
      font-weight: bold; color: white !important; padding: 0 2px; border-radius: 3px } 
@@ -794,3 +800,45 @@ h3.imgTitle{
 
 .RESDialogSmall.livePreview > h3 {color: black;font-size: 14px;margin-top: 6px;margin-bottom: 10px;font-weight: normal;}
 .res-nightmode .RESDialogSmall h3 {color: #ccc}
+
+/* Teehee */
+/*
+div[data-fullname$="a"] .usertext-body .md:after{content:" Also, I'm mafia.";}
+div[data-fullname$="b"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="c"] .usertext-body .md:after{content:" Also, I'm a cop";}
+div[data-fullname$="d"] .usertext-body .md:after{content:" Also, I'm a doctor";}
+div[data-fullname$="e"] .usertext-body .md:after{content:" Also, I'm a jailer";}
+div[data-fullname$="f"] .usertext-body .md:after{content:" Also, I'm mafia.";}
+div[data-fullname$="g"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="h"] .usertext-body .md:after{content:" Also, I'm mafia";}
+div[data-fullname$="i"] .usertext-body .md:after{content:" Also, I'm mafia.";}
+div[data-fullname$="j"] .usertext-body .md:after{content:" Also, I'm a jester";}
+div[data-fullname$="k"] .usertext-body .md:after{content:" Also, I'm a serial killer";}
+div[data-fullname$="l"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="m"] .usertext-body .md:after{content:" Also, I'm mafia.";}
+div[data-fullname$="n"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="o"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="p"] .usertext-body .md:after{content:" Also, I'm a cop";}
+div[data-fullname$="q"] .usertext-body .md:after{content:" Also, Maku is a shitlord. ABSOLUTELY REKT.";}
+div[data-fullname$="r"] .usertext-body .md:after{content:" Also, I'm a roleblocker";}
+div[data-fullname$="s"] .usertext-body .md:after{content:" Also, I'm a serial killer";}
+div[data-fullname$="t"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="u"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="v"] .usertext-body .md:after{content:" Also, I'm a vigilante.";}
+div[data-fullname$="w"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="x"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="y"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="z"] .usertext-body .md:after{content:" Also, I'm a tireslasher";}
+
+div[data-fullname$="0"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="1"] .usertext-body .md:after{content:" Also, I'm mafia";}
+div[data-fullname$="2"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="3"] .usertext-body .md:after{content:" Also, I'm mafia";}
+div[data-fullname$="4"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="5"] .usertext-body .md:after{content:" Also, I'm mafia";}
+div[data-fullname$="6"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="7"] .usertext-body .md:after{content:" Also, I'm mafia";}
+div[data-fullname$="8"] .usertext-body .md:after{content:" Also, I'm a townie";}
+div[data-fullname$="9"] .usertext-body .md:after{content:" Also, I'm mafia";} */
+
+.id-t1_cgi1p64 .entry .usertext-body .md:after {content:" Also, I'm a butt." !important;}
